add login api service

--- a/angular.json
+++ b/angular.json
@@ -72,10 +72,15 @@
               "browserTarget": "angular-practice:build:production"
             },
             "development": {
-              "browserTarget": "angular-practice:build:development"
+              "browserTarget": "angular-practice:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "browserTarget": "angular-practice:build:development",
+            "proxyConfig": "src/proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
