--- a/package.json
+++ b/package.json
@@ -30,7 +30,13 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "@coreui/angular": "~4.4.9",
+    "@coreui/angular-chartjs": "~4.4.7",
+    "@coreui/chartjs": "^3.1.2",
+    "@coreui/coreui": "~4.2.6",
+    "@coreui/icons": "~3.0.1",
+    "@coreui/icons-angular": "~4.4.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.11",
