--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/scss/styles.scss"
             ],
             "scripts": []
           },
@@ -119,7 +119,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/scss/styles.scss"
+
             ],
             "scripts": []
           }
