--- a/package.json
+++ b/package.json
@@ -21,22 +21,23 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "@ngrx/effects": "^15.4.0",
-    "@ngrx/entity": "^15.4.0",
-    "@ngrx/router-store": "^15.4.0",
-    "@ngrx/store": "^15.4.0",
-    "@ngrx/store-devtools": "^15.4.0",
-    "@types/uuid": "^10.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "uuid": "^10.0.0",
-    "zone.js": "~0.12.0",
     "@coreui/angular": "~4.4.9",
     "@coreui/angular-chartjs": "~4.4.7",
     "@coreui/chartjs": "^3.1.2",
     "@coreui/coreui": "~4.2.6",
     "@coreui/icons": "~3.0.1",
-    "@coreui/icons-angular": "~4.4.7"
+    "@coreui/icons-angular": "~4.4.7",
+    "@ngrx/effects": "^15.4.0",
+    "@ngrx/entity": "^15.4.0",
+    "@ngrx/router-store": "^15.4.0",
+    "@ngrx/store": "^15.4.0",
+    "@ngrx/store-devtools": "^15.4.0",
+    "@swimlane/ngx-datatable": "^20.1.0",
+    "@types/uuid": "^10.0.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.11",
