--- a/angular.json
+++ b/angular.json
@@ -51,6 +51,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/scss/styles.scss"
             ],
             "scripts": []
@@ -119,6 +120,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/scss/styles.scss"
 
             ],
