--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngrx/store-devtools": "^15.4.0",
     "@swimlane/ngx-datatable": "^20.1.0",
     "@types/uuid": "^10.0.0",
+    "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^10.0.0",
